# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//125-cd-nextgen/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/azure/resources/dtos:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/azure/webapp:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/azure/webapp/steps:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/azure/webapp/variablecreator:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/creator/plan/azure/webapps:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/creator/plan/steps:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/creator/plan/steps/azure/webapp:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/provision/azure/variablecreator:module",
        "//125-cd-nextgen/modules/common/contracts/src/main/java/io/harness/cdng/pipeline/resources:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/bean/artifactsource:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/mappers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/acr/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/ami:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/artifactory/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/azureartifacts:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/custom:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/docker/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/ecr/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/gcr/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/githubpackages/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/googleartifactregistry/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/googlecloudstorage/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/jenkins/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/nexus/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/service/impl:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/steps/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/steps/constants:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/configfile:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/configfile/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan/stage:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan/stage/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan/stage/v1:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customDeployment:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customDeployment/constants:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customDeployment/eventlistener:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customDeployment/variablecreator:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customdeploymentng:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/mappers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/resource:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/services:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/yaml:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment/helper:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment/helper/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment/yaml:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/events:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/execution:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/execution/helper:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/execution/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/executionplan:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/featureFlag:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/gitops/constants:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/helpers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/hooks/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/infra:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/infra/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/infra/mapper:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/infra/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/k8s/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/delegate:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/mappers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/resources:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/yaml:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/yaml/storeConfig/moduleSource:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/executions/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/helpers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/steps/v1:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/provision/shellscript:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/service/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/service/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/service/steps/constants:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/utilities:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/yaml:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/evaluators:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/ng:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/ng/core/envGroup:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/polling/bean:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/rbac:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/artifact:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/envGroup:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/executions:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/polling:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/telemetry:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/telemetry/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/utils:module",
        "//125-cd-nextgen/modules/gitops/core/src/main/java/io/harness/cdng/gitops/steps:module",
        "//125-freeze:module",
        "//126-instance:module",
        "//127-cd-nextgen-entities:module",
        "//400-rest:module",
        "//400-rest/src/main/java/io/harness/cdlicense/bean:module",
        "//400-rest/src/main/java/io/harness/cdlicense/exception:module",
        "//420-delegate-service:module",
        "//440-connector-nextgen:module",
        "//445-gitops:module",
        "//867-polling-contracts:module",
        "//870-cg-orchestration:module",
        "//874-orchestration-delay:module",
        "//877-filestore:module",
        "//878-ng-common-utilities:module",
        "//878-ng-common-utilities/src/main/java/io/harness/beans/common:module",
        "//879-pipeline-ci-commons:module",
        "//880-pipeline-cd-commons:module",
        "//884-pms-commons:module",
        "//890-sm-core:module",
        "//890-sm-delegate:module",
        "//900-git-sync-sdk:module",
        "//910-delegate-service-driver:module",
        "//920-delegate-service-beans:module",
        "//930-delegate-tasks:module",
        "//930-delegate-tasks/src/main/java/io/harness/delegate/task/artifacts/mappers:module",
        "//930-delegate-tasks/src/main/java/io/harness/delegate/utils:module",
        "//930-ng-core-clients:module",
        "//930-ng-license-manager:module",
        "//931-secret-providers/src/java/io/harness/beans:module",
        "//931-secret-providers/src/java/io/harness/mappers:module",
        "//931-secret-providers/src/java/software/wings/beans:module",
        "//940-feature-flag:module",
        "//940-secret-manager-client:module",
        "//942-enforcement-sdk:module",
        "//943-enforcement-beans:module",
        "//945-account-mgmt:module",
        "//945-license-usage-sdk:module",
        "//950-delegate-tasks-beans:module",
        "//950-ng-core:module",
        "//950-ng-project-n-orgs:module",
        "//950-opa-client:module",
        "//950-wait-engine:module",
        "//951-delegate-task-commons/src/main/java/io/harness/delegate/beans:module",
        "//951-delegate-task-commons/src/main/java/io/harness/delegate/beans/executioncapability:module",
        "//951-delegate-task-commons/src/main/java/software/wings/beans:module",
        "//952-scm-java-client:module",
        "//953-events-api:module",
        "//953-yaml-commons:module",
        "//954-connector-beans:module",
        "//955-delegate-beans:module",
        "//955-filters-sdk:module",
        "//955-outbox-sdk:module",
        "//955-setup-usage-sdk:module",
        "//956-feature-flag-beans:module",
        "//957-cg-beans:module",
        "//958-migration-sdk:module",
        "//959-common-entities/src/main/java/io/harness/aggregates:module",
        "//959-common-entities/src/main/java/io/harness/beans:module",
        "//959-file-service-commons/src/main/java/io/harness/delegate/beans:module",
        "//959-ng-persistence:module",
        "//959-psql-database-models:module",
        "//960-api-services/src/main/java/io/harness/aws/asg:module",
        "//960-api-services/src/main/java/io/harness/aws/beans:module",
        "//960-api-services/src/main/java/io/harness/aws/v2/lambda:module",
        "//960-api-services/src/main/java/io/harness/ecs:module",
        "//960-api-services/src/main/java/io/harness/elastigroup:module",
        "//960-api-services/src/main/java/io/harness/exception/sanitizer:module",
        "//960-api-services/src/main/java/io/harness/googlefunctions/command:module",
        "//960-api-services/src/main/java/io/harness/k8s:module",
        "//960-api-services/src/main/java/io/harness/pcf:module",
        "//960-api-services/src/main/java/io/harness/serverless:module",
        "//960-api-services/src/main/java/io/harness/terraform/expression:module",
        "//960-continuous-features:module",
        "//960-ng-core-beans/src/main/java/io/harness/beans:module",
        "//960-ng-core-beans/src/main/java/io/harness/cdng/service/beans:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/cdstage:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/dto:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/envGroup/dto:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/environment/beans:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/environment/dto:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/filestore:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/filestore/dto:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/infrastructure:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/k8s:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/service/dto:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/template:module",
        "//960-ng-core-beans/src/main/java/io/harness/steps/shellscript:module",
        "//960-ng-license-beans:module",
        "//960-ng-license-usage-beans:module",
        "//960-persistence:module",
        "//960-persistence/src/main/java/io/harness/annotation:module",
        "//960-persistence/src/main/java/io/harness/mongo/index:module",
        "//960-persistence/src/main/java/io/harness/mongo/iterator/filter:module",
        "//960-persistence/src/main/java/io/harness/ng:module",
        "//960-persistence/src/main/java/io/harness/persistence:module",
        "//960-persistence/src/main/java/io/harness/queue:module",
        "//960-yaml-sdk:module",
        "//967-walktree-visitor:module",
        "//970-api-services-beans/src/main/java/io/harness/artifactory:module",
        "//970-api-services-beans/src/main/java/io/harness/aws:module",
        "//970-api-services-beans/src/main/java/io/harness/azure:module",
        "//970-api-services-beans/src/main/java/io/harness/azure/model:module",
        "//970-api-services-beans/src/main/java/io/harness/beans:module",
        "//970-api-services-beans/src/main/java/io/harness/container:module",
        "//970-api-services-beans/src/main/java/io/harness/delegate/beans/connector/docker:module",
        "//970-api-services-beans/src/main/java/io/harness/filter:module",
        "//970-api-services-beans/src/main/java/io/harness/filter/dto:module",
        "//970-api-services-beans/src/main/java/io/harness/git/model:module",
        "//970-api-services-beans/src/main/java/io/harness/helm:module",
        "//970-api-services-beans/src/main/java/io/harness/jira:module",
        "//970-api-services-beans/src/main/java/io/harness/k8s/exception:module",
        "//970-api-services-beans/src/main/java/io/harness/k8s/model:module",
        "//970-api-services-beans/src/main/java/io/harness/logging:module",
        "//970-api-services-beans/src/main/java/io/harness/manifest:module",
        "//970-api-services-beans/src/main/java/io/harness/pcf/model:module",
        "//970-api-services-beans/src/main/java/io/harness/provision:module",
        "//970-api-services-beans/src/main/java/io/harness/security/encryption:module",
        "//970-api-services-beans/src/main/java/io/harness/serializer/kryo:module",
        "//970-api-services-beans/src/main/java/io/harness/servicenow:module",
        "//970-api-services-beans/src/main/java/io/harness/spotinst/model:module",
        "//970-api-services-beans/src/main/java/io/harness/ssh:module",
        "//970-api-services-beans/src/main/java/software/wings/beans:module",
        "//970-api-services-beans/src/main/java/software/wings/helpers/ext/azure/devops:module",
        "//970-api-services-beans/src/main/java/software/wings/helpers/ext/jenkins:module",
        "//970-api-services-beans/src/main/java/software/wings/utils:module",
        "//970-grpc:module",
        "//970-ng-commons/src/main/java/io/harness:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/cd:module",
        "//970-ng-commons/src/main/java/io/harness/common:module",
        "//970-ng-commons/src/main/java/io/harness/delegate/task/k8s:module",
        "//970-ng-commons/src/main/java/io/harness/encryption:module",
        "//970-ng-commons/src/main/java/io/harness/gitsync/beans:module",
        "//970-ng-commons/src/main/java/io/harness/gitsync/interceptor:module",
        "//970-ng-commons/src/main/java/io/harness/gitsync/sdk:module",
        "//970-ng-commons/src/main/java/io/harness/ng/beans:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/common/beans:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/dto:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/entitydetail:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/entitysetupusage/dto:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/mapper:module",
        "//970-ng-commons/src/main/java/io/harness/pms/dashboards:module",
        "//970-ng-commons/src/main/java/io/harness/pms/yaml:module",
        "//970-ng-commons/src/main/java/io/harness/pms/yaml/validation:module",
        "//970-ng-commons/src/main/java/io/harness/preflight:module",
        "//970-ng-commons/src/main/java/io/harness/remote/client:module",
        "//970-ng-commons/src/main/java/io/harness/scope:module",
        "//970-ng-commons/src/main/java/io/harness/utils:module",
        "//970-ng-commons/src/main/java/io/harness/validator:module",
        "//970-ng-commons/src/main/java/io/harness/yaml/core:module",
        "//970-ng-commons/src/main/java/io/harness/yaml/core/timeout:module",
        "//970-ng-commons/src/main/java/io/harness/yaml/infra:module",
        "//970-telemetry-beans:module",
        "//979-recaster/src/main/java/io/harness/annotation:module",
        "//980-commons/src/main/java/io/harness/annotations:module",
        "//980-commons/src/main/java/io/harness/artifact:module",
        "//980-commons/src/main/java/io/harness/beans:module",
        "//980-commons/src/main/java/io/harness/data/algorithm:module",
        "//980-commons/src/main/java/io/harness/data/encoding:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/data/validator:module",
        "//980-commons/src/main/java/io/harness/distribution/constraint:module",
        "//980-commons/src/main/java/io/harness/encryption:module",
        "//980-commons/src/main/java/io/harness/eraro:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//980-commons/src/main/java/io/harness/exception/exceptionmanager:module",
        "//980-commons/src/main/java/io/harness/exception/exceptionmanager/exceptionhandler:module",
        "//980-commons/src/main/java/io/harness/exception/ngexception:module",
        "//980-commons/src/main/java/io/harness/exception/runtime:module",
        "//980-commons/src/main/java/io/harness/expression:module",
        "//980-commons/src/main/java/io/harness/expression/common:module",
        "//980-commons/src/main/java/io/harness/filesystem:module",
        "//980-commons/src/main/java/io/harness/govern:module",
        "//980-commons/src/main/java/io/harness/jackson:module",
        "//980-commons/src/main/java/io/harness/logging:module",
        "//980-commons/src/main/java/io/harness/morphia:module",
        "//980-commons/src/main/java/io/harness/observer:module",
        "//980-commons/src/main/java/io/harness/reflection:module",
        "//980-commons/src/main/java/io/harness/rest:module",
        "//980-commons/src/main/java/io/harness/security:module",
        "//980-commons/src/main/java/io/harness/serializer:module",
        "//980-commons/src/main/java/io/harness/serializer/kryo:module",
        "//980-commons/src/main/java/io/harness/shell:module",
        "//980-commons/src/main/java/io/harness/supplier:module",
        "//980-commons/src/main/java/io/harness/tasks:module",
        "//980-commons/src/main/java/io/harness/testing:module",
        "//980-commons/src/main/java/io/harness/threading:module",
        "//980-commons/src/main/java/io/harness/time:module",
        "//980-commons/src/main/java/io/harness/utils:module",
        "//980-commons/src/main/java/io/harness/validation:module",
        "//980-commons/src/main/java/io/harness/waiter:module",
        "//980-commons/src/main/java/software/wings/beans:module",
        "//980-commons/src/main/java/software/wings/stencils:module",
        "//980-commons/src/main/java/software/wings/utils:module",
        "//999-annotations/src/main/java/io/harness/agent/sdk:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//clients/access-control/sdk:module",
        "//clients/chaos:module",
        "//clients/pipeline-service/pms-client:module",
        "//clients/pipeline-service/pms-sdk:module",
        "//clients/pipeline-service/pms-sdk-core:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_jooq_jooq",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//125-cd-nextgen/src/test/resources:resource",
    ],
    resources = [
        "//125-cd-nextgen/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//:lombok",
        "//125-cd-nextgen/modules/common/contracts/src/main/java/io/harness/cdng/pipeline/resources:module",
        "//884-pms-commons:module",
        "//942-enforcement-sdk:module",
        "//950-ng-core:tests",
        "//955-delegate-beans:module",
        "//960-persistence:supporter-test",
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
        "@maven//:org_powermock_powermock_api_mockito2",
        "@maven//:org_powermock_powermock_module_junit4",
        "@maven//:pl_pragmatists_JUnitParams",
    ],
)

run_tests()

run_analysis()
