load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//930-delegate-tasks:module",
        "//950-delegate-tasks-beans:module",
        "//950-log-client:module",
        "//970-api-services-beans:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//980-commons/src/main/java/io/harness/logging:module",
        "//980-commons/src/main/java/io/harness/network:module",
        "//980-commons/src/main/java/software/wings/beans:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:com_google_guava_guava",
        "@maven//:com_intellij_annotations",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)

run_analysis_per_module()
